--- a/app/views/questionnaire/new.html.erb
+++ b/app/views/questionnaire/new.html.erb
@@ -1,13 +1,14 @@
 <%= render :partial => 'scripts' %>
 <h1>New <%= @questionnaire.display_type %></h1>
 <% if @questionnaire.type == "QuizQuestionnaire" %>    <!--handle a questionnaire differently if it is a quiz-->
-  <% form_tag :action => 'create_quiz_questionnaire', :pid => @participant_id, :aid => @assignment_id do %>
+  <% form_tag :action => 'create_quiz_type', :pid => @participant_id, :aid => @assignment_id do %>
   	<%= render :partial => 'questionnaire' %>
-  	<%= submit_tag "Create #{@questionnaire.display_type.downcase}", :name=>"save" %>
-    <script>
-      var num_quiz_quest = <%= Assignment.find_by_id(@assignment_id).num_quiz_questions %>;
-      for (var x = 1; x <= num_quiz_quest; x++) {addQuestions();}
-    </script>
+    <%= radio_button_tag(:qtype, "Multiple Choice - radio") %> Multiple Choice - radio <br>
+    <%= radio_button_tag(:qtype, "True False") %> True False <br>
+    <%= radio_button_tag(:qtype, "Essay") %> Essay <br>
+    <%= radio_button_tag(:qtype, "Multiple Choice - checked") %> Multiple Choice - checked <br>
+    <br>
+    <%= submit_tag "Select #{@questionnaire.display_type.downcase} type", :name=>"save" %>
   <% end %>
 <% else %>
   <% form_tag :action => 'create_questionnaire', :pid => @participant_id, :aid => @assignment_id do %>
