--- a/app/views/questionnaire/_scripts.html.erb
+++ b/app/views/questionnaire/_scripts.html.erb
@@ -76,7 +76,7 @@ function addQuestion(){
 
             //Listing the options for a quiz questionnaire
             <% for weight in Question::ANSWERS %>
-                <%= "weights += '<option value=" + weight[1].to_s + ">" + weight[0].to_s + "</option>';"%>
+                <%= "weights += '<option value=" + weight[1].to_s + ">" + weight[0].to_s + "</option>';" %>
             <% end %>
         <% elsif @questionnaire.quiz_question_type == "Essay" %>   // if the question is essay
             for(i = 1; i < 5; i++) {
@@ -147,7 +147,20 @@ function addQuestion(){
 	column.innerHTML = weights;
 	row.appendChild(column);
 
-	num_questions = num_questions + 1;
+    <% if @questionnaire.quiz_question_type == "Multiple Choice - checked" %>
+        column = document.createElement("td");
+        weights = "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select id=new_question_" + id + "_weight name=new_question[" + id + 		"][weight_1]>";
+
+        //Listing the options for a quiz questionnaire
+        <% for weight in Question::ANSWERS %>
+            <%= "weights += '<option value=" + weight[1].to_s + ">" + weight[0].to_s + "</option>';"%>
+        <% end %>
+        weights = weights + "</select>";
+        column.innerHTML = weights;
+        row.appendChild(column);
+    <%end%>
+
+    num_questions = num_questions + 1;
 }
 
 </script>
