--- a/app/views/questionnaire/_scripts.html.erb
+++ b/app/views/questionnaire/_scripts.html.erb
@@ -38,12 +38,14 @@ function addQuestion(){
 	var row = table.insertRow(-1);
 
 	id = num_questions;
-	<% if @questionnaire.type != 'QuizQuestionnaire' %>
-	column = document.createElement("td");
-	column.innerHTML = "<center><input type=checkbox id='question_chk" + num_questions + "'></center>";
-	row.appendChild(column);
+
+    <% if @questionnaire.type != 'QuizQuestionnaire' %>
+        column = document.createElement("td");
+        column.innerHTML = "<center><input type=checkbox id='question_chk" + num_questions + "'></center>";
+        row.appendChild(column);
 	<% end %>
-	column = document.createElement("td");
+
+    column = document.createElement("td");
 	column.innerHTML = "<input id=new_question_" + id + "_txt name=new_question[" + id + "][txt] size=70 type=text/>";
 	row.appendChild(column);
 
@@ -53,77 +55,96 @@ function addQuestion(){
                 var row_for_choices = table.insertRow(-1);
                 cid = i;
                 column = document.createElement("td");
-                column.innerHTML = "&nbsp;&nbsp;&nbsp;" + i + ".&nbsp; <input id=new_choices_" + cid + "_txt name=new_choices[" + id + "][" + cid + "] size=40     type=text/>";
+                column.innerHTML = "&nbsp;&nbsp;&nbsp;" + i + ".&nbsp; <input id=new_choices_" + cid + "_txt name=new_choices[" + id + "][" + cid + "][txt] size=40     type=text/>";
+                row_for_choices.appendChild(column);
+
+                column = document.createElement("td");
+	            weights = "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select id=new_choices_" + cid + "_weight name=new_choices[" + id + "][" + cid + "][weight]>";
+                //Listing the options for a quiz questionnaire
+                <% for weight in Question::ANSWERS %>
+	    	        <%= "weights += '<option value=" + weight[1].to_s + ">" + weight[0].to_s + "</option>';"%>
+	            <% end %>
+
+                weights = weights + "</select>";
+                column.innerHTML = weights;
                 row_for_choices.appendChild(column);
             }
-            column = document.createElement("td");
-	        weights = "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select id=new_question_" + id + "_weight name=new_question[" + id + 		"][weight]>";
-
-            //Listing the options for a quiz questionnaire
-            <% for weight in Question::ANSWERS %>
-		        <%= "weights += '<option value=" + weight[1].to_s + ">" + weight[0].to_s + "</option>';"%>
-	        <% end %>
         <% elsif @questionnaire.quiz_question_type == "Multiple Choice - checked" %>   // if the question is multiple choice - checked
             for(i = 1; i < 5; i++) {
                 var row_for_choices = table.insertRow(-1);
                 cid = i;
                 column = document.createElement("td");
-                column.innerHTML = "&nbsp;&nbsp;&nbsp;" + i + ".&nbsp; <input id=new_choices_" + cid + "_txt name=new_choices[" + id + "][" + cid + "] size=40     type=text/>";
+                column.innerHTML = "&nbsp;&nbsp;&nbsp;" + i + ".&nbsp; <input id=new_choices_" + cid + "_txt name=new_choices[" + id + "][" + cid + "][txt] size=40     type=text/>";
+                row_for_choices.appendChild(column);
+
+                column = document.createElement("td");
+                weights = "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select id=new_choices_" + cid + "_weight name=new_choices[" + id + "][" + cid + "][weight]>";
+                //Listing the options for a quiz questionnaire
+                <% for weight in Question::ANSWERS %>
+                    <%= "weights += '<option value=" + weight[1].to_s + ">" + weight[0].to_s + "</option>';"%>
+                <% end %>
+
+                weights = weights + "</select>";
+                column.innerHTML = weights;
                 row_for_choices.appendChild(column);
             }
-            column = document.createElement("td");
-            weights = "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select id=new_question_" + id + "_weight name=new_question[" + id + 		"][weight]>";
-
-            //Listing the options for a quiz questionnaire
-            <% for weight in Question::ANSWERS %>
-                <%= "weights += '<option value=" + weight[1].to_s + ">" + weight[0].to_s + "</option>';" %>
-            <% end %>
         <% elsif @questionnaire.quiz_question_type == "Essay" %>   // if the question is essay
             for(i = 1; i < 5; i++) {
                 var row_for_choices = table.insertRow(-1);
                 cid = i;
                 column = document.createElement("td");
+                column.innerHTML = "&nbsp;&nbsp;&nbsp;" + i + ".&nbsp; <input id=new_choices_" + cid + "_txt name=new_choices[" + id + "][" + cid + "][txt] size=40     type=text/>";
+                row_for_choices.appendChild(column);
 
-                column.innerHTML = "&nbsp;&nbsp;&nbsp;" + i + ".&nbsp; <input id=new_choices_" + cid + "_txt name=new_choices[" + id + "][" + cid + "] size=40     type=text/>";
+                column = document.createElement("td");
+                weights = "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select id=new_choices_" + cid + "_weight name=new_choices[" + id + "][" + cid + "][weight]>";
+                //Listing the options for a quiz questionnaire
+                <% for weight in Question::ANSWERS %>
+                    <%= "weights += '<option value=" + weight[1].to_s + ">" + weight[0].to_s + "</option>';"%>
+                <% end %>
+
+                weights = weights + "</select>";
+                column.innerHTML = weights;
                 row_for_choices.appendChild(column);
             }
-            column = document.createElement("td");
-            weights = "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select id=new_question_" + id + "_weight name=new_question[" + id + 		"][weight]>";
-
-            //Listing the options for a quiz questionnaire
-            <% for weight in Question::ANSWERS %>
-                <%= "weights += '<option value=" + weight[1].to_s + ">" + weight[0].to_s + "</option>';"%>
-            <% end %>
         <% elsif @questionnaire.quiz_question_type == "True False" %>   // if the question is true/false
             for(i = 1; i < 5; i++) {
                 var row_for_choices = table.insertRow(-1);
                 cid = i;
                 column = document.createElement("td");
-                column.innerHTML = "&nbsp;&nbsp;&nbsp;" + i + ".&nbsp; <input id=new_choices_" + cid + "_txt name=new_choices[" + id + "][" + cid + "] size=40     type=text/>";
+                column.innerHTML = "&nbsp;&nbsp;&nbsp;" + i + ".&nbsp; <input id=new_choices_" + cid + "_txt name=new_choices[" + id + "][" + cid + "][txt] size=40     type=text/>";
+                row_for_choices.appendChild(column);
+
+                column = document.createElement("td");
+                weights = "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select id=new_choices_" + cid + "_weight name=new_choices[" + id + "][" + cid + "][weight]>";
+                //Listing the options for a quiz questionnaire
+                <% for weight in Question::ANSWERS %>
+                    <%= "weights += '<option value=" + weight[1].to_s + ">" + weight[0].to_s + "</option>';"%>
+                <% end %>
+
+                weights = weights + "</select>";
+                column.innerHTML = weights;
                 row_for_choices.appendChild(column);
             }
-            column = document.createElement("td");
-            weights = "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select id=new_question_" + id + "_weight name=new_question[" + id + 		"][weight]>";
-
-            //Listing the options for a quiz questionnaire
-            <% for weight in Question::ANSWERS %>
-                <%= "weights += '<option value=" + weight[1].to_s + ">" + weight[0].to_s + "</option>';"%>
-            <% end %>
         <% else %> //default
             for(i = 1; i < 5; i++) {
                 var row_for_choices = table.insertRow(-1);
                 cid = i;
                 column = document.createElement("td");
-                column.innerHTML = "&nbsp;&nbsp;&nbsp;" + i + ".&nbsp; <input id=new_choices_" + cid + "_txt name=new_choices[" + id + "][" + cid + "] size=40     type=text/>";
+                column.innerHTML = "&nbsp;&nbsp;&nbsp;" + i + ".&nbsp; <input id=new_choices_" + cid + "_txt name=new_choices[" + id + "][" + cid + "][txt] size=40     type=text/>";
+                row_for_choices.appendChild(column);
+
+                column = document.createElement("td");
+                weights = "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select id=new_choices_" + cid + "_weight name=new_choices[" + id + "][" + cid + "][weight]>";
+                //Listing the options for a quiz questionnaire
+                <% for weight in Question::ANSWERS %>
+                    <%= "weights += '<option value=" + weight[1].to_s + ">" + weight[0].to_s + "</option>';"%>
+                <% end %>
+
+                weights = weights + "</select>";
+                column.innerHTML = weights;
                 row_for_choices.appendChild(column);
             }
-            column = document.createElement("td");
-            weights = "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select id=new_question_" + id + "_weight name=new_question[" + id + 		"][weight]>";
-
-            //Listing the options for a quiz questionnaire
-            <% for weight in Question::ANSWERS %>
-                <%= "weights += '<option value=" + weight[1].to_s + ">" + weight[0].to_s + "</option>';"%>
-            <% end %>
         <% end %>   //end of if @questionnaire.quiz_question_type
     <% else %>  //not quiz questionnaire
 	    column = document.createElement("td");
@@ -141,24 +162,10 @@ function addQuestion(){
 	    <% for weight in Question::WEIGHTS %>
 		    <%= "weights += '<option value=" + weight[1].to_s + ">" + weight[0].to_s + "</option>';"%>
 	    <% end %>
-    <% end %>
-
-	weights = weights + "</select>";
-	column.innerHTML = weights;
-	row.appendChild(column);
-
-    <% if @questionnaire.quiz_question_type == "Multiple Choice - checked" %>
-        column = document.createElement("td");
-        weights = "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select id=new_question_" + id + "_weight name=new_question[" + id + 		"][weight_1]>";
-
-        //Listing the options for a quiz questionnaire
-        <% for weight in Question::ANSWERS %>
-            <%= "weights += '<option value=" + weight[1].to_s + ">" + weight[0].to_s + "</option>';"%>
-        <% end %>
         weights = weights + "</select>";
         column.innerHTML = weights;
         row.appendChild(column);
-    <%end%>
+    <% end %>
 
     num_questions = num_questions + 1;
 }
