--- a/app/views/questionnaire/new_quiz_essay.html.erb
+++ b/app/views/questionnaire/new_quiz_essay.html.erb
@@ -1,7 +1,8 @@
 <%= render :partial => 'scripts' %>
 <h1>New <%= @questionnaire.display_type %></h1>
 <% if @questionnaire.type == "QuizQuestionnaire" %>    <!--handle a questionnaire differently if it is a quiz-->
-    <% form_tag :action => 'create_quiz_questionnaire', :pid => @participant_id, :aid => @assignment_id do %>
+    <% form_tag :action => 'create_quiz_questionnaire', :pid => @participant_id, :aid => @assignment_id,
+                :question_type_obj => @questionnaire.quiz_question_type, :question_type_var => @question_type do %>
         <%= render :partial => 'questionnaire' %>
         <%= submit_tag "Create #{@questionnaire.display_type.downcase}", :name=>"save" %>
         <script>
