--- a/app/views/response/_options.html.erb
+++ b/app/views/response/_options.html.erb
@@ -4,15 +4,16 @@
   <div>
     <% if question_type == "Multiple Choice - checked" %>
         <% advice_list.each{ | item | %>
-            <%= check_box_tag 'checked_items[][]', k, item.id -%>
+            <%= check_box_tag 'checked_items_'+ ques_id.to_s + '[]', item.id -%>
             &nbsp;<%=item.advice %>
             <br>
             <% k+=1 %>
         <%}%>
     <% elsif question_type == "Essay" %>
+        <%= text_field_tag('question_'+ ques_id.to_s + '[]') %>
     <% elsif question_type == "True False" %>
-        <br><%= radio_button_tag 'option_'+ i.to_s, item.id, false %>&nbsp;<%= True %>
-        <br><%= radio_button_tag 'option_'+ i.to_s, item.id, false %>&nbsp;<%= False %>
+        <br><%= radio_button_tag 'option_'+ i.to_s, 1.to_s, false %>&nbsp;<%= TRUE %>
+        <br><%= radio_button_tag 'option_'+ i.to_s, 2.to_s, false %>&nbsp;<%= FALSE %>
     <% elsif question_type == "Multiple Choice - radio" %>
         <% advice_list.each{ | item | %>
             <br><%= radio_button_tag 'option_'+ i.to_s, item.id, false %>&nbsp;<%=item.advice %>
