--- a/app/views/questionnaire/_scripts.html.erb
+++ b/app/views/questionnaire/_scripts.html.erb
@@ -97,11 +97,8 @@ function addQuestion(){
                 //row_for_choices.appendChild(column);
 
                 column = document.createElement("td");
-                weights = "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select id=new_choices_" + cid + "_weight name=new_choices[" + id + "][" + cid + "][weight]>";
                 //Listing the options for a quiz questionnaire
-                <% for weight in Question::ANSWERS %>
-                    <%= "weights += '<option value=" + weight[1].to_s + ">" + weight[0].to_s + "</option>';"%>
-                <% end %>
+
 
                 weights = weights + "</select>";
                 column.innerHTML = weights;
@@ -124,7 +121,7 @@ function addQuestion(){
                 column = document.createElement("td");
                 weights = "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select id=new_choices_" + cid + "_weight name=new_choices[" + id + "][" + cid + "][weight]>";
                 //Listing the options for a quiz questionnaire
-                <% for weight in Question::ANSWERS %>
+                <% for weight in Question::ANSWERS_TRUE_FALSE %>
                     <%= "weights += '<option value=" + weight[1].to_s + ">" + weight[0].to_s + "</option>';"%>
                 <% end %>
 
