--- a/app/views/response/_options.html.erb
+++ b/app/views/response/_options.html.erb
@@ -10,7 +10,7 @@
             <% k+=1 %>
         <%}%>
     <% elsif question_type == "Essay" %>
-        <%= text_field_tag('question_'+ ques_id.to_s + '[]') %>
+        <%= text_field_tag('question_'+ ques_id.to_s, '', :size=>70) %>
     <% elsif question_type == "True False" %>
         <br><%= radio_button_tag 'option_'+ i.to_s, 1.to_s, false %>&nbsp;<%= TRUE %>
         <br><%= radio_button_tag 'option_'+ i.to_s, 2.to_s, false %>&nbsp;<%= FALSE %>
